// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox with children should render loading state 1`] = `
<i
  aria-live="polite"
  class="deferred-spinner is-loading"
  data-testid="deferred-spinner"
>
  <span
    class="a11y-hidden"
  >
    loading
  </span>
</i>
`;

exports[`Checkbox with no children should render loading state 1`] = `
<i
  aria-live="polite"
  class="deferred-spinner is-loading"
  data-testid="deferred-spinner"
>
  <span
    class="a11y-hidden"
  >
    me
  </span>
</i>
`;

exports[`should render the checkbox on the right 1`] = `
<a
  aria-checked="true"
  aria-label="me"
  class="link-checkbox"
  href="#"
  role="checkbox"
>
  <a>
    child
  </a>
  <i
    aria-live="polite"
    class="deferred-spinner a11y-hidden"
    data-testid="deferred-spinner"
  />
  <i
    class="icon-checkbox icon-checkbox-checked"
  />
</a>
`;
